fixing pop over stutter from z-index on opacity transition + readme updates

--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,11 @@ body{
   background-color: #56add3;
 }
 
+header{
+  position: relative;
+  z-index: 10;
+}
+
 header,
 main{
   opacity: 0;
@@ -638,6 +643,7 @@ body.zoom_out .text_button{
   margin-bottom: 1.5rem;
   border: 3px solid;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 @media (max-width: 1100px){
